--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,38 +13,42 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/typography": "^0.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
-		"daisyui": "^3.0.22",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
-		"postcss": "^8.4.23",
+		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.3.1",
+		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
 		"@auth/core": "^0.8.2",
 		"@auth/sveltekit": "^0.3.1",
+		"@popperjs/core": "^2.11.8",
 		"@socket.io/redis-adapter": "^8.2.1",
 		"dotenv": "^16.3.0",
 		"express": "^4.18.2",
+		"flowbite": "^1.6.6",
+		"flowbite-svelte": "^0.38.2",
 		"ioredis": "^5.3.2",
 		"redis": "^4.6.7",
 		"socket.io": "^4.6.2",
-		"socket.io-client": "^4.6.2"
+		"socket.io-client": "^4.6.2",
+		"tailwind-merge": "^1.13.2"
 	}
 }
