--- a/discordbot/.env.example
+++ b/discordbot/.env.example
@@ -1,5 +1,11 @@
 DISCORD_TOKEN=
 
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_ENDPOINT=
+S3_REGION=
+S3_BUCKET=
+
 REDISHOST=
 REDISPASSWORD=
 REDISPORT=
