--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,8 +6,11 @@ AUTH_TRUST_HOST=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
-CLOUDFLARE_ACCOUNT_ID=
-CLOUDFLARE_ASSETS_API_TOKEN=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_ENDPOINT=
+S3_REGION=
+S3_BUCKET=
 
 REDISHOST=
 REDISPASSWORD=
