--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@auth/core": "^0.8.2",
 		"@auth/sveltekit": "^0.3.1",
+		"@aws-sdk/client-s3": "^3.354.0",
 		"@popperjs/core": "^2.11.8",
 		"@socket.io/redis-adapter": "^8.2.1",
 		"dotenv": "^16.3.0",
