Removed need for socketio

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,4 +26,4 @@ RUN npm run build
 ENV PORT=3000
 
 EXPOSE 3000
-CMD ["node", "-r", "dotenv/config", "server.js"]
+CMD ["node", "-r", "dotenv/config", "build/index.js"]
