--- a/discordbot/Dockerfile
+++ b/discordbot/Dockerfile
@@ -6,4 +6,6 @@ COPY ./requirements.txt /app
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
+COPY . .
+
 CMD ["python", "main.py"]
