--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
 		"@aws-sdk/client-s3": "^3.354.0",
 		"@popperjs/core": "^2.11.8",
 		"dotenv": "^16.3.0",
+		"express": "^4.18.2",
 		"flowbite": "^1.6.6",
 		"flowbite-svelte": "^0.38.2",
 		"redis": "^4.6.7",
