--- a/pubsub/package.json
+++ b/pubsub/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "dotenv": ">=16.3.1",
+    "express": ">=4.18.2",
+    "socket.io": ">=4.7.2"
   }
 }
