--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,10 +31,12 @@
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"svelte-preprocess": "^5.1.3",
+		"sveltekit-superforms": "^1.13.1",
 		"tailwindcss": "^3.4.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10"
+		"vite": "^5.0.10",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -42,11 +44,14 @@
 		"@auth/sveltekit": "^0.5.0",
 		"@aws-sdk/client-s3": "^3.478.0",
 		"@popperjs/core": "^2.11.8",
+		"bits-ui": "^0.11.8",
+		"clsx": "^2.0.0",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"flowbite": "^2.2.1",
-		"flowbite-svelte": "^0.44.21",
+		"formsnap": "^0.4.2",
+		"lucide-svelte": "^0.302.0",
 		"redis": "^4.6.12",
-		"tailwind-merge": "^2.2.0"
+		"tailwind-merge": "^2.2.0",
+		"tailwind-variants": "^0.1.19"
 	}
 }
