Added dark mode

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
 		"express": "^4.18.2",
 		"formsnap": "^0.4.2",
 		"lucide-svelte": "^0.302.0",
+		"mode-watcher": "^0.1.2",
 		"redis": "^4.6.12",
 		"tailwind-merge": "^2.2.0",
 		"tailwind-variants": "^0.1.19"
