Improved dice image caching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - REDISUSER=default
     volumes:
       - ./discordbot:/app
+      - ./discordbot/data:/app/data
 
   frontend:
     build:
