--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,8 @@ ENV REDISPORT=$REDISPORT
 ENV REDISPASSWORD=$REDISPASSWORD
 ENV REDISUSER=$REDISUSER
 
+ENV NODE_ENV=development
+
 WORKDIR /app
 
 COPY package*.json /app
