--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -1,3 +1,8 @@
+[package]
+name = "proxy"
+version = "0.1.0"
+edition = "2021"
+
 [dependencies]
 warp = "0.3"
 tokio = { version = "1", features = ["full"] }
