--- a/proxy/package.json
+++ b/proxy/package.json
@@ -7,8 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "http-proxy": "^1.18.1",
     "url": "^0.11.0",
-    "ws": "^7.4.6"
+    "ws": "^7.5.10"
   }
 }
