--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,20 +1,23 @@
-# Use a lightweight Node.js image
-FROM node:14-alpine
+# Use official Rust image as the build environment
+FROM rust:latest AS build
 
-# Create and change to the app directory
-WORKDIR /app
+# Create a new directory for the application
+WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy the application code
+# Copy the project files
 COPY . .
 
-# Expose the port the app runs on
-EXPOSE 8080
+# Build the project
+RUN cargo build --release
 
-# Start the application
-CMD ["node", "server.js"]
+# Use a minimal base image for the final image
+FROM debian:buster-slim
+
+# Copy the built binary from the build stage
+COPY --from=build /usr/src/app/target/release/websocket_proxy /usr/local/bin/websocket_proxy
+
+# Set the startup command
+CMD ["websocket_proxy"]
+
+# Expose the port
+EXPOSE 3030
