--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4.0"
+actix-web-actors = "4.0"
 tokio = { version = "1", features = ["full"] }
-warp = "0.3"
-tokio-tungstenite = "0.15"
-hyper = "0.14"
-hyper-tls = "0.5"
-futures-util = "0.3"
+reqwest = { version = "0.11", features = ["websocket"] }
+dotenv = "0.15"
