--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,35 +1,20 @@
-# Use the official Rust image as the base
-FROM rust:latest AS builder
+# Use the official Node.js image.
+FROM node:14
 
-# Set the working directory inside the container
+# Create and change to the app directory.
 WORKDIR /usr/src/app
 
-# Copy the Cargo.toml and Cargo.lock files
-COPY Cargo.toml Cargo.lock ./
+# Copy application dependency manifests to the container image.
+COPY package*.json ./
 
-# Copy the source code
-COPY src ./src
+# Install dependencies.
+RUN npm install
 
-# Build the project
-RUN cargo build --release
+# Copy local code to the container image.
+COPY . .
 
-# Use a minimal image to run the application
-FROM debian:buster-slim
-
-# Set the working directory inside the container
-WORKDIR /usr/src/app
-
-# Copy the built binary from the builder stage
-COPY --from=builder /usr/src/app/target/release/websocket_proxy .
-
-# Expose the port that the application will run on
+# Expose the port the app runs on.
 EXPOSE $PORT
 
-# Set environment variables
-ENV SUBURB_HOST $SUBURB_HOST
-ENV SUBURB_TOKEN $SUBURB_TOKEN
-ENV ORIGIN_SOURCE $ORIGIN_SOURCE
-ENV PORT $PORT
-
-# Run the application
-CMD ["./websocket_proxy"]
+# Run the web service on container startup.
+CMD [ "node", "server.js" ]
