--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.6",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/winston": "^2.4.4",
 		"@typescript-eslint/eslint-plugin": "^6.16.0",
 		"@typescript-eslint/parser": "^6.16.0",
 		"autoprefixer": "^10.4.16",
@@ -52,6 +53,8 @@
 		"redis": "^4.6.12",
 		"svelte-sonner": "^0.3.11",
 		"tailwind-merge": "^2.2.0",
-		"tailwind-variants": "^0.1.19"
+		"tailwind-variants": "^0.1.19",
+		"winston": "^3.11.0",
+		"winston-loki": "^6.0.8"
 	}
 }
