--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,12 +34,12 @@
 		"tailwindcss": "^3.4.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10"
+		"vite": "^5.4.19"
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/core": "^0.19.0",
-		"@auth/sveltekit": "^0.5.0",
+		"@auth/core": "^0.39.1",
+		"@auth/sveltekit": "^1.9.2",
 		"@aws-sdk/client-s3": "^3.478.0",
 		"@popperjs/core": "^2.11.8",
 		"bits-ui": "^0.11.8",
@@ -52,8 +52,6 @@
 		"redis": "^4.6.12",
 		"svelte-sonner": "^0.3.11",
 		"tailwind-merge": "^2.2.0",
-		"tailwind-variants": "^0.1.19",
-		"winston": "^3.11.0",
-		"winston-loki": "^6.0.8"
+		"tailwind-variants": "^0.1.19"
 	}
 }
