Refactor + Prometheus metrics

--- a/websocket/Dockerfile
+++ b/websocket/Dockerfile
@@ -8,15 +8,15 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o proxy .
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o websocket .
 
 FROM gcr.io/distroless/static-debian12
 
 ENV PORT="5555"
 ENV ORIGIN_SOURCE=""
 
-COPY --from=build /app/proxy /usr/local/bin/proxy
+COPY --from=build /app/websocket /usr/local/bin/websocket
 
 EXPOSE 5555
 
-ENTRYPOINT ["/usr/local/bin/proxy"]
+ENTRYPOINT ["/usr/local/bin/websocket"]
