--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,20 @@ services:
     ports:
       - 6379:6379
 
-  ws-proxy:
+  websocket:
     build:
-      context: ./proxy
+      context: ./websocket
       dockerfile: Dockerfile
-    container_name: ws-proxy
+    container_name: websocket
     ports:
       - 5555:5555
     environment:
       - PORT=5555
       - ORIGIN_SOURCE=localhost:3000
       - LOKI_URL=
-      - LOKI_USERNAME=
-      - LOKI_PASSWORD=
+      - PROMETHEUS_URL=
+      - TELEMETRY_USERNAME=
+      - TELEMETRY_PASSWORD=
 
   bot:
     build:
@@ -26,18 +27,19 @@ services:
       dockerfile: Dockerfile.dev
     container_name: bot
     depends_on:
-      - ws-proxy
+      - websocket
       - redis
     environment:
       - DISCORD_TOKEN=
       - LOKI_URL=
-      - LOKI_USERNAME=
-      - LOKI_PASSWORD=
+      - PROMETHEUS_URL=
+      - TELEMETRY_USERNAME=
+      - TELEMETRY_PASSWORD=
       - REDISHOST=redis
       - REDISPASSWORD=password
       - REDISPORT=6379
       - REDISUSER=default
-      - WEBSOCKET_HOST=ws-proxy:5555
+      - WEBSOCKET_HOST=websocket:5555
       - S3_ACCESS_KEY_ID=
       - S3_BUCKET=
       - S3_ENDPOINT=
@@ -62,8 +64,9 @@ services:
       - DISCORD_CLIENT_ID=
       - DISCORD_CLIENT_SECRET=
       - LOKI_URL=
-      - LOKI_USERNAME=
-      - LOKI_PASSWORD=
+      - PROMETHEUS_URL=
+      - TELEMETRY_USERNAME=
+      - TELEMETRY_PASSWORD=
       - PUBLIC_WEBSOCKET_PROXY=localhost:5555
       - REDISHOST=redis
       - REDISPASSWORD=password
